--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -375,4 +375,30 @@
 
     </div>
 
+    <div class="over_you container">
+
+        <div class="over_you_head">
+            <h2>сверх ты</h2>
+
+            <div class="right">
+                <div class="line"></div>
+                <img src="{% static 'main/images/over_you.svg' %}" alt="">
+            </div>
+        </div>
+
+        <div class="over_you_grid">
+            <div class="over_you_grid_item">
+            <img src="{% static 'main/images/human.svg' %}" alt="">
+            </div>
+            <div class="over_you_grid_item"><span>Наша работа</span> будет направлена на изучение и открытие уникальных глубин вашего психического мира, так как все сокровища, как известно, скрыты от посторонних глаз и имеют ценность только, когда их находят. <span>Понять себя</span> — значит вновь обрести себя, но уже в новом качестве, а значит построить и прожить новую, более счастливую жизнь. <span>Познавая и понимая</span> себя, беря <span>ответственность</span> за свою судьбу, вы обретаете равновесие в своей душе и можете двигать свой корабль по заданному вами курсу, зная, что <span>справитесь</span> с любой непогодой.</div>
+            <div class="over_you_grid_item">
+                <p>В нашем пространстве вы получите <span>надёжного проводника</span> на пути нового знакомства с собой, а также научитесь понимать себя и другого ибо все пережитое ранее формирует наш <span>внутренний мир</span>, внешнее неразрывно связано с внутренним, прошлое имеет свои отклики в актуальном, и влияет на дальнейшую судьбу, способность выстраивать <span>гармоничные отношения</span> с другими, <span>любить</span> и быть счастливым.</p>
+            </div>
+            <div class="over_you_grid_item">
+                <img src="{% static 'main/images/boat.jpg' %}" alt="">
+            </div>
+        </div>
+
+    </div>
+
 {% endblock %}
