--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -698,6 +698,7 @@
   display: flex;
   align-items: center;
   gap: 4dvw;
+  overflow: hidden;
 }
 @media screen and (max-width: 768px) {
   .acquaintance .acquaintance_head .rigth {
@@ -925,4 +926,81 @@
   100% {
     transform: rotate(180deg);
   }
+}
+.over_you {
+  margin-top: 200px;
+  position: relative;
+}
+.over_you .over_you_head {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  align-items: center;
+  grid-auto-rows: auto;
+  margin-bottom: 50px;
+}
+.over_you .over_you_head h2 {
+  font-size: 34px;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 768px) {
+  .over_you .over_you_head h2 {
+    font-size: 24px;
+  }
+}
+.over_you .over_you_head .right {
+  display: flex;
+  align-items: center;
+  gap: 4dvw;
+}
+.over_you .over_you_head .right .line {
+  height: 1px;
+  width: 100%;
+  background-color: var(--brown);
+}
+@media screen and (max-width: 991px) {
+  .over_you .over_you_head .right .line {
+    display: none;
+  }
+}
+.over_you .over_you_head .right img {
+  display: block;
+  margin-left: auto;
+}
+@media screen and (max-width: 768px) {
+  .over_you .over_you_head .right img {
+    width: 44px;
+  }
+}
+.over_you .over_you_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 40px;
+}
+@media screen and (max-width: 768px) {
+  .over_you .over_you_grid {
+    display: none;
+  }
+}
+.over_you .over_you_grid .over_you_grid_item {
+  font-size: 16px;
+  line-height: 130%;
+  color: var(--green);
+}
+.over_you .over_you_grid .over_you_grid_item span {
+  font-weight: 600;
+}
+.over_you .over_you_grid .over_you_grid_item img {
+  border-radius: 16px;
+}
+.over_you .over_you_grid .over_you_grid_item:nth-child(3) p {
+  width: 100%;
+  max-width: 360px;
+  text-align: end;
+  margin-left: auto;
+}
+.over_you .over_you_grid .over_you_grid_item:nth-child(4) img {
+  width: 100%;
 }/*# sourceMappingURL=home.css.map */
