--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -22,6 +22,10 @@
 
     <div class="slider_container">
         <section id="main_slider" class="splide" aria-label="Splide Basic HTML Example">
+            <button class="chat_button desc">
+                <img src="{% static 'main/images/chat.svg' %}" alt="">
+            </button>
+
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
@@ -45,5 +49,16 @@
                 </ul>
             </div>
         </section>
+
+        <div class="container">
+            <h3>Просто Психоанализ
+
+                <p class="decor">для просто Сверх тебя</p>
+            </h3>
+
+            <button class="chat_button mob">
+                <img src="{% static 'main/images/chat.svg' %}" alt="">
+            </button>
+        </div>
     </div>
 {% endblock %}
