--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -105,6 +105,7 @@
 
 .slider_container {
   position: relative;
+  margin-bottom: 170px;
   width: 100%;
 }
 @media (max-width: 768px) {
@@ -117,28 +118,43 @@
     margin-top: calc(40px + 30 * 0.0520833333vw);
   }
 }
-.slider_container:before {
-  content: "";
+.slider_container .chat_button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  border: 3px solid var(--white2);
+  background-color: var(--brown);
+}
+.slider_container .chat_button img {
+  position: relative;
+  top: 1px;
+}
+.slider_container .chat_button.desc {
   position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: 130px;
-  background: linear-gradient(90deg, transparent 0%, var(--background) 70%);
+  top: 10px;
+  right: 10px;
   z-index: 10;
 }
-.slider_container:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 130px;
-  background: linear-gradient(90deg, var(--background) 30%, transparent 100%);
-  z-index: 10;
+.slider_container .chat_button.mob {
+  margin-left: auto;
+  margin-top: 20px;
+}
+@media screen and (min-width: 769px) {
+  .slider_container .chat_button.mob {
+    display: none;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .slider_container .chat_button.desc {
+    top: 50%;
+    transform: translate(0, -50%);
+  }
 }
 @media screen and (max-width: 768px) {
-  .slider_container::after, .slider_container::before {
+  .slider_container .chat_button.desc {
     display: none;
   }
 }
@@ -146,9 +162,55 @@
   width: 100%;
   max-width: 1361px;
   margin: 0 auto;
+  margin-bottom: 70px;
+}
+@media screen and (max-width: 1400px) {
+  .slider_container .splide {
+    padding-right: 50px;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .slider_container .splide {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .slider_container .splide {
+    padding-right: 0;
+    margin-bottom: 50px;
+  }
 }
 .slider_container .splide .splide__track {
+  position: relative;
   padding: 0 100px !important;
+}
+.slider_container .splide .splide__track .splide__list {
+  height: unset;
+}
+.slider_container .splide .splide__track:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 130px;
+  background: linear-gradient(90deg, transparent 0%, rgba(240, 238, 221, 0.2) 20%, rgba(240, 238, 221, 0.4) 40%, rgba(240, 238, 221, 0.6) 60%, var(--background) 80%);
+  z-index: 10;
+}
+.slider_container .splide .splide__track:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 130px;
+  background: linear-gradient(90deg, var(--background) 40%, transparent 100%);
+  z-index: 10;
+}
+@media screen and (max-width: 768px) {
+  .slider_container .splide .splide__track::after, .slider_container .splide .splide__track::before {
+    display: none;
+  }
 }
 @media screen and (max-width: 768px) {
   .slider_container .splide .splide__track {
@@ -168,6 +230,59 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media screen and (max-width: 1400px) {
+  .slider_container .container {
+    max-width: unset;
+    padding-left: 100px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .slider_container .container {
+    padding: 0 16px;
+  }
+}
+.slider_container .container h3 {
+  position: relative;
+  color: var(--brown3);
+  font-family: var(--anticva);
+  font-size: 90px;
+}
+@media screen and (max-width: 1300px) {
+  .slider_container .container h3 {
+    width: -moz-min-content;
+    width: min-content;
+  }
+}
+@media screen and (max-width: 1000px) and (max-width: 768px) {
+  .slider_container .container h3 {
+    font-size: calc(44px + 78.2 * (100vw - 390px) / 1920);
+  }
+}
+@media screen and (max-width: 1000px) and (min-width: 768px) {
+  .slider_container .container h3 {
+    font-size: calc(44px + 46 * 0.0520833333vw);
+  }
+}
+.slider_container .container p.decor {
+  position: relative;
+  font-weight: 400;
+  font-size: 22px;
+  left: 50%;
+  color: var(--green);
+  font-family: var(--main-font);
+}
+@media screen and (max-width: 1300px) {
+  .slider_container .container p.decor {
+    left: 40%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .slider_container .container p.decor {
+    left: unset;
+    margin-top: 20px;
+    text-align: end;
+  }
 }
 
 @keyframes shim {
