--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -86,34 +86,51 @@
 
 .slider_container {
     position: relative;
+    margin-bottom: 170px;
     width: 100%;
     @include common.adaptiveProperty(margin-top, 70, 40);
 
-    &:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 100%;
-        width: 130px;
-        background: linear-gradient(90deg, transparent 0%, var(--background) 70%);
-        z-index: 10;
-    }
+    .chat_button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 60px;
+        width: 60px;
+        border-radius: 50%;
+        border: 3px solid var(--white2);
+        background-color: var(--brown);
 
-    &:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 130px;
-        background: linear-gradient(90deg, var(--background) 30%, transparent 100%);
-        z-index: 10;
-    }
-    
-    @include common.mediaMaxWidth(768) {
-        &::after, &::before {
-            display: none;
+        & img {
+            position: relative;
+            top: 1px;
+        }
+
+        &.desc {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 10;
+        }
+
+        &.mob {
+            margin-left: auto;
+            margin-top: 20px;
+            @include common.mediaMinWidth(769) {
+                display: none;
+            }
+        }
+
+        @include common.mediaMaxWidth(1400) {
+            &.desc {
+                top: 50%;
+                transform: translate(0, -50%);
+            }
+        }
+
+        @include common.mediaMaxWidth(768) {
+            &.desc {
+                display: none;
+            }
         }
     }
 
@@ -121,9 +138,63 @@
         width: 100%;
         max-width: 1361px;
         margin: 0 auto;
+        margin-bottom: 70px;
+
+        @include common.mediaMaxWidth(1400) {
+            padding-right: 50px;
+        }
+
+        @include common.mediaMaxWidth(1280) {
+            margin-bottom: 20px;
+        }
+
+        @include common.mediaMaxWidth(768) {
+            padding-right: 0;
+            margin-bottom: 50px;
+        }
 
         .splide__track {
+            position: relative;
             padding: 0 100px !important;
+
+            .splide__list {
+                height: unset;
+            }
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                height: 100%;
+                width: 130px;
+                background:  linear-gradient(
+                    90deg,
+                    transparent 0%,
+                    rgba(240, 238, 221, 0.2) 20%,
+                    rgba(240, 238, 221, 0.4) 40%,
+                    rgba(240, 238, 221, 0.6) 60%,
+                    var(--background) 80%
+                );
+                z-index: 10;
+            }
+        
+            &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 130px;
+                background: linear-gradient(90deg, var(--background) 40%, transparent 100%);
+                z-index: 10;
+            }
+
+            @include common.mediaMaxWidth(768) {
+                &::after, &::before {
+                    display: none;
+                }
+            }
 
             @include common.mediaMaxWidth(768) {
                 padding: 0 16px !important;
@@ -141,6 +212,53 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+            }
+        }
+    }
+
+
+    .container {
+
+        @include common.mediaMaxWidth(1400) {
+            max-width: unset;
+            padding-left: 100px;
+        }
+
+        @include common.mediaMaxWidth(768) {
+            padding: 0 16px;
+        }
+
+        & h3 {
+            position: relative;
+            color: var(--brown3);
+            font-family: var(--anticva);
+            font-size: 90px;
+            
+            @include common.mediaMaxWidth(1300) {
+                width: min-content;
+            }
+
+            @include common.mediaMaxWidth(1000) {
+                @include common.adaptiveFont(90, 44);
+            }
+        }
+    
+        & p.decor {
+            position: relative;
+            font-weight: 400;
+            font-size: 22px;
+            left: 50%;
+            color: var(--green);
+            font-family: var(--main-font);
+
+            @include common.mediaMaxWidth(1300) {
+                left: 40%;
+            }
+
+            @include common.mediaMaxWidth(700) {
+                left: unset;
+                margin-top: 20px;
+                text-align: end;
             }
         }
     }
