--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -10,15 +10,19 @@
 /*--------------*/
 :root {
   --grey: #3F3A33;
+  --grey3: #C2BDB8;
   --green: #31443A;
   --brown: #6A5847;
   --brown2: #333333;
+  --brown3: #3F3A33;
   --white: #FCFAF2;
+  --white2: #F0EEDD;
   --green-transparent: #31443A99;
   --background: #f0eedd;
   --black: #000000;
   --lora: "Lora", serif;
   --anticva: "Anticva";
+  --main-font: "Montserrat", sans-serif;
 }
 
 /*--------Обнуление----------*/
@@ -55,7 +59,7 @@ html, body {
   font-weight: 400;
   line-height: 1;
   font-size: 14px;
-  font-family: "Montserrat", sans-serif;
+  font-family: var(--main-font);
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
