--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -452,6 +452,26 @@
             </div>
         </div>
 
+        <section id="over_you_slider" class="over_you_splide splide" aria-label="Splide Basic HTML Example">
+
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide">
+                        <img class="bload" src="{% static 'main/images/boat.jpg' %}" alt="">
+                        <p>
+                            <span>Наша работа</span> будет направлена на изучение и открытие уникальных глубин вашего психического мира, так как все сокровища, как известно, скрыты от посторонних глаз и имеют ценность только, когда их находят. <span>Понять себя</span> — значит вновь обрести себя, но уже в новом качестве, а значит построить и прожить новую, более счастливую жизнь. <span>Познавая и понимая</span> себя, беря <span>ответственность</span> за свою судьбу, вы обретаете равновесие в своей душе и можете двигать свой корабль по заданному вами курсу, зная, что <span>справитесь</span> с любой непогодой.
+                        </p>
+                    </li>
+                    <li class="splide__slide">
+                        <img src="{% static 'main/images/human.svg' %}" alt="">
+                        <p class="max">
+                            В нашем пространстве вы получите <span>надёжного проводника</span> на пути нового знакомства с собой, а также научитесь понимать себя и другого ибо все пережитое ранее формирует наш <span>внутренний мир</span>, внешнее неразрывно связано с внутренним, прошлое имеет свои отклики в актуальном, и влияет на дальнейшую судьбу, способность выстраивать <span>гармоничные отношения</span> с другими, <span>любить</span> и быть счастливым.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     </div>
 
 {% endblock %}
