--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -430,6 +430,10 @@
 
     <div class="over_you container">
 
+        <div class="decor">
+            <!-- <img src="{% static 'main/images/over_you_decor.svg' %}" alt=""> -->
+        </div>
+
         <div class="over_you_head">
             <h2>сверх ты</h2>
 
