--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -1042,6 +1042,7 @@
   text-transform: uppercase;
   max-width: 500px;
   min-width: 500px;
+  font-family: var(--anticva);
 }
 @media screen and (max-width: 768px) {
   .acquaintance .acquaintance_head .acquaintance_title h2 {
@@ -1323,6 +1324,7 @@
 .over_you .over_you_head h2 {
   font-size: 34px;
   text-transform: uppercase;
+  font-family: var(--anticva);
 }
 @media screen and (max-width: 768px) {
   .over_you .over_you_head h2 {
@@ -1447,6 +1449,173 @@
   border: 1px solid var(--brown);
 }
 .over_you .over_you_splide .splide__pagination__page.is-active {
+  background-color: var(--brown);
+  transform: scale(1) !important;
+}
+
+.about {
+  position: relative;
+  margin-top: 150px;
+}
+.about .decor {
+  position: absolute;
+  top: -108px;
+  left: -147px;
+  z-index: 0;
+  width: 300px;
+  height: 300px;
+  background-image: url("./../images/about_decor.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: blur(20px);
+}
+@media screen and (max-width: 768px) {
+  .about .decor {
+    width: 200px;
+    height: 200px;
+    top: -82px;
+    left: -87px;
+  }
+}
+.about .about_head {
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  align-items: center;
+  grid-auto-rows: auto;
+  margin-bottom: 30px;
+  z-index: 2;
+}
+@media screen and (max-width: 991px) {
+  .about .about_head {
+    margin-bottom: 80px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .about .about_head {
+    margin-bottom: 50px;
+  }
+}
+.about .about_head h2 {
+  font-size: 34px;
+  text-transform: uppercase;
+  font-family: var(--anticva);
+}
+@media screen and (max-width: 768px) {
+  .about .about_head h2 {
+    font-size: 24px;
+  }
+}
+.about .about_head .right {
+  display: flex;
+  align-items: center;
+  gap: 4dvw;
+}
+.about .about_head .right .line {
+  height: 1px;
+  width: 100%;
+  background-color: var(--brown);
+}
+@media screen and (max-width: 991px) {
+  .about .about_head .right .line {
+    display: none;
+  }
+}
+.about .about_head .right img {
+  display: block;
+  margin-left: auto;
+}
+@media screen and (max-width: 768px) {
+  .about .about_head .right img {
+    width: 40px;
+  }
+}
+.about .about_image {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  border-radius: 29px;
+  overflow: hidden;
+}
+.about .about_image img {
+  width: 100%;
+}
+.about .about_slider_block .buttons_block {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 20px;
+}
+.about .about_splide {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-top: 30px;
+}
+@media screen and (max-width: 768px) {
+  .about .about_splide {
+    grid-template-columns: 1fr;
+    padding-bottom: 40px;
+  }
+}
+.about .about_splide .splide__track {
+  position: relative;
+}
+.about .about_splide .splide__track .splide__list {
+  height: unset;
+}
+.about .about_splide .splide__slide {
+  width: 100%;
+  height: -moz-max-content;
+  height: max-content;
+  font-size: 16px;
+  color: var(--green);
+  line-height: 130%;
+}
+.about .about_splide .splide__slide span {
+  font-weight: 600;
+}
+@media screen and (max-width: 768px) {
+  .about .about_splide .splide__slide {
+    text-align: center;
+  }
+}
+.about .about_splide .splide__arrows {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 20px;
+}
+@media screen and (max-width: 768px) {
+  .about .about_splide .splide__arrows {
+    display: none;
+  }
+}
+.about .about_splide .splide__arrows .splide__arrow {
+  position: static;
+  background-color: transparent;
+  width: 48px;
+  height: 48px;
+  opacity: 1;
+  transform: translateY(0) rotate(180deg);
+}
+.about .about_splide .splide__arrows .splide__arrow svg {
+  width: 100%;
+  height: 100%;
+}
+.about .about_splide .splide__pagination__page {
+  width: 10px !important;
+  height: 10px !important;
+  background: transparent;
+  border: 1px solid var(--brown);
+}
+.about .about_splide .splide__pagination__page.is-active {
   background-color: var(--brown);
   transform: scale(1) !important;
 }/*# sourceMappingURL=home.css.map */
