--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Сверх ТЫ{% endblock %}
+{% block title %}{{ title }}{% endblock %}
+{% block description %}{{ description }}{% endblock %}
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'main/home/home.css' %}">
@@ -517,7 +518,10 @@
                         Мы — <span>группа</span> дипломированных практикующих психоаналитически ориентированных психотерапевтов, которые продолжают учиться и получать новый опыт в своей профессии. Каждый из нас прошёл или проходит свой путь в собственной терапии и <span>готов поделиться своим опытом</span> в процессе прохождения вашего пути к СверхТы
                     </li>
                     <li class="splide__slide">
-                        Мы — <span>группа</span> практикующих психоаналитически ориентированных психотерапевтов, которые продолжают учиться и получать новый опыт в своей профессии. Каждый из нас прошёл или проходит свой путь в собственной терапии и <span>готов поделиться своим опытом</span> в процессе прохождения вашего пути к СверхТы
+                        Мы не волшебники, чтобы в миг устранять проблемы и менять жизни людей, но волшебство может произойти, когда появится честность к самому себе и доверие к тому, кому интересен твой внутренний мир. Каждый из нас по- своему уникален и имеет свою специфику.
+                    </li>
+                    <li class="splide__slide">
+                        Мы создали это пространство для тех, кто захочет улучшить  качество своей жизни и обрести шанс познакомиться с собой заново, держа за руку того, кто уже прошел этот непростой путь.
                     </li>
                 </ul>
             </div>
