--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -3,6 +3,7 @@
 
 {% block title %}{{ title }}{% endblock %}
 {% block description %}{{ description }}{% endblock %}
+{% block keywords %}{{ keywords }}{% endblock %}
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'main/home/home.css' %}">
