--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -1604,6 +1604,10 @@
   height: 48px;
   opacity: 1;
   transform: translateY(0) rotate(180deg);
+  transition: 0.3s;
+}
+.about .about_splide .splide__arrows .splide__arrow:disabled {
+  opacity: 0.5;
 }
 .about .about_splide .splide__arrows .splide__arrow svg {
   width: 100%;
@@ -1618,4 +1622,187 @@
 .about .about_splide .splide__pagination__page.is-active {
   background-color: var(--brown);
   transform: scale(1) !important;
+}
+
+.activities {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  padding-right: 0;
+}
+.activities .decor {
+  position: absolute;
+  top: -100px;
+  left: -112px;
+  z-index: 0;
+  width: 260px;
+  height: 250px;
+  background-image: url("./../images/activities.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: blur(20px);
+}
+.activities .tabs {
+  display: flex;
+  align-items: center;
+  overflow: auto;
+}
+@media screen and (max-width: 991px) {
+  .activities .tabs {
+    display: none;
+    align-self: center;
+  }
+}
+.activities .tabs.mob {
+  display: none;
+}
+@media screen and (max-width: 991px) {
+  .activities .tabs.mob {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .activities .tabs.mob {
+    justify-content: flex-start;
+  }
+}
+.activities .tabs.mob::-webkit-scrollbar {
+  display: none;
+}
+.activities .tabs .tab {
+  position: relative;
+  height: 29px;
+  padding: 0 12px;
+  color: var(--green);
+  font-size: 16px;
+  font-weight: 600;
+  opacity: 0.6;
+  display: flex;
+  align-items: center;
+  transition: 0.3s;
+  cursor: pointer;
+  white-space: nowrap;
+}
+.activities .tabs .tab::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: transparent;
+  transition: 0.3s;
+}
+.activities .tabs .tab.active {
+  opacity: 1;
+}
+.activities .tabs .tab.active::before {
+  background-color: var(--green);
+}
+.activities .activities_head {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  align-items: flex-end;
+  margin-bottom: 50px;
+  padding-right: 16px;
+  z-index: 2;
+}
+@media screen and (max-width: 768px) {
+  .activities .activities_head {
+    align-items: center;
+  }
+}
+.activities .activities_head h2 {
+  font-size: 34px;
+  text-transform: uppercase;
+  font-family: var(--anticva);
+}
+@media screen and (max-width: 768px) {
+  .activities .activities_head h2 {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 769px) {
+  .activities .activities_head img {
+    display: none;
+  }
+}
+.activities .activities_slider {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  margin-top: 30px;
+  display: none;
+  opacity: 0;
+  animation: Open 0.5s forwards;
+}
+.activities .activities_slider.active {
+  display: block;
+}
+@media screen and (max-width: 768px) {
+  .activities .activities_slider {
+    grid-template-columns: 1fr;
+    padding-bottom: 40px;
+  }
+}
+.activities .activities_slider .splide__track {
+  position: relative;
+}
+.activities .activities_slider .splide__track .splide__list {
+  height: unset;
+}
+.activities .activities_slider .splide__slide {
+  width: 360px !important;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.activities .activities_slider .splide__slide h2 {
+  font-size: 16px;
+  color: var(--green);
+  line-height: 130%;
+}
+.activities .activities_slider .splide__slide a {
+  color: var(--green);
+  font-weight: 600;
+}
+.activities .activities_slider .splide__slide img {
+  width: 100%;
+  border-radius: 20px;
+}
+.activities .activities_slider .splide__arrows {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-left: auto;
+  width: -moz-max-content;
+  width: max-content;
+  margin-top: 20px;
+}
+@media screen and (max-width: 991px) {
+  .activities .activities_slider .splide__arrows {
+    display: none;
+  }
+}
+.activities .activities_slider .splide__arrows .splide__arrow {
+  position: static;
+  background-color: transparent;
+  width: 48px;
+  height: 48px;
+  opacity: 1;
+  transform: translateY(0) rotate(180deg);
+  transition: 0.3s;
+}
+.activities .activities_slider .splide__arrows .splide__arrow svg {
+  width: 100%;
+  height: 100%;
+  fill: none !important;
 }/*# sourceMappingURL=home.css.map */
