--- a/main/static/main/footer/footer.css
+++ b/main/static/main/footer/footer.css
@@ -99,8 +99,15 @@ footer .footer_wrapper .social a.social__link {
   height: 40px;
   flex-shrink: 0;
 }
+footer .footer_wrapper .social a.social__link svg {
+  position: relative;
+  transition: 0.4s;
+}
+footer .footer_wrapper .social a.social__link svg path {
+  transition: 0.4s;
+}
 @media screen and (max-width: 768px) {
-  footer .footer_wrapper .social a.social__link img {
+  footer .footer_wrapper .social a.social__link svg {
     width: 28px;
   }
 }
@@ -110,6 +117,7 @@ footer .footer_wrapper .social a.social__link.bot {
 }
 footer .footer_wrapper .social a.social__link.bot span {
   font-weight: 700;
+  transition: 0.4s;
 }
 @media (max-width: 768px) {
   footer .footer_wrapper .social a.social__link.bot span {
@@ -119,6 +127,17 @@ footer .footer_wrapper .social a.social__link.bot span {
 @media (min-width: 768px) {
   footer .footer_wrapper .social a.social__link.bot span {
     font-size: calc(21px + -7 * 0.0520833333vw);
+  }
+}
+@media screen and (min-width: 991px) {
+  footer .footer_wrapper .social a.social__link:hover svg {
+    transform: scale(1.25);
+  }
+  footer .footer_wrapper .social a.social__link:hover svg path {
+    fill: var(--grey);
+  }
+  footer .footer_wrapper .social a.social__link:hover span {
+    color: var(--grey);
   }
 }
 @media screen and (max-width: 768px) {
