--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -23,29 +23,31 @@
 
     <div class="slider_container">
         <section id="main_slider" class="splide" aria-label="Splide Basic HTML Example">
-            <button class="chat_button desc">
-                <img src="{% static 'main/images/chat.svg' %}" alt="">
-            </button>
-
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <img src="{% static 'main/images/main_slider/slide1.jpg' %}" alt="">
+                        <p class="hover_text">Открытие себя</p>
                     </li>
                     <li class="splide__slide">
                         <img src="{% static 'main/images/main_slider/slide2.png' %}" alt="">
+                        <p class="hover_text">Открытие себя</p>
                     </li>
                     <li class="splide__slide">
                         <img src="{% static 'main/images/main_slider/slide3.png' %}" alt="">
+                        <p class="hover_text">Открытие себя</p>
                     </li>
                     <li class="splide__slide">
                         <img src="{% static 'main/images/main_slider/slide4.png' %}" alt="">
+                        <p class="hover_text">Открытие себя</p>
                     </li>
                     <li class="splide__slide">
                         <img src="{% static 'main/images/main_slider/slide5.png' %}" alt="">
+                        <p class="hover_text">Открытие себя</p>
                     </li>
                     <li class="splide__slide">
                         <img src="{% static 'main/images/main_slider/slide6.png' %}" alt="">
+                        <p class="hover_text">Открытие себя</p>
                     </li>
                 </ul>
             </div>
@@ -56,13 +58,9 @@
 
                 <p class="decor">для просто Сверх тебя</p>
             </h3>
-
-            <button class="chat_button mob">
-                <img src="{% static 'main/images/chat.svg' %}" alt="">
-            </button>
         </div>
     </div>
-    
+
     <div class="container scenaries">
         <div class="scenaries_item a active" onclick="openDescription(event)">
             <div class="description">
@@ -452,6 +450,156 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="nature_element container">
+        <div class="title_flex">
+            <div class="title">
+                <h3>СТИХИИ</h3>
+                
+                <img class="title_decor" src="{% static 'main/images/nature_elements.png' %}" alt="">
+
+                <img class="pattern" src="{% static 'main/images/pattern.svg' %}" alt="">
+            </div>
+            
+            <div class="description">
+                <img src="{% static 'main/images/marks.png' %}" alt="">
+
+                <p>
+                    Принято считать, что секрет <span>здоровья и благополучия</span> человека заключён в особом балансе всех <span>четырех стихий.</span> Выявление доминирующей Стихии и исследование, какие Стихии находятся в избытке, а какие недостаточно проявлены, позволяют нам понять, как с помощью их <span>балансировки добиться</span> позитивных <span>изменений</span> в жизни
+                </p>
+            </div>
+        </div>
+
+        <div class="nature_element_grid">
+            <div class="grid_item a" onclick="openNatureElement(event)">
+                <div class="item_content">
+                    <div class="name">
+                        <h4>ВОДА</h4>
+                        
+                        <img src="{% static 'main/images/nature_elements/arrow_right_down.svg' %}" alt="">
+                    </div>
+    
+                    <img class="el_image top" src="{% static 'main/images/nature_elements/water.svg' %}" alt="">
+                    <img class="el_image down" src="{% static 'main/images/nature_elements/water.svg' %}" alt="">
+    
+                    <div class="decor">
+                        <img src="{% static 'main/images/nature_elements/subtract1.png' %}" alt="">
+                    </div>
+                </div>
+
+                <div class="element_description">
+                    <div class="content">
+                        <p>
+                            Может быть отблеск внутри тебя готов сиять естественным образом.
+                            Чувствовать пылкий азарт открытий - это принимать свое пламя, не сжигая остальные стихии в себе.
+                        </p>
+    
+                        <img class="coach_image" src="{% static 'main/images/nature_elements/coach.svg' %}" alt="">
+
+                        <img class="corner" src="{% static 'main/images/nature_elements/slice.svg' %}" alt="" >
+
+                        <img class="element_decor" src="{% static 'main/images/nature_elements/water_decor.svg' %}" alt="" >
+                    </div>
+                </div>
+            </div>
+            
+            <div class="grid_item b " onclick="openNatureElement(event)">
+                <div class="item_content">
+                    <div class="name">
+                        <img src="{% static 'main/images/nature_elements/arrow_left_down.svg' %}" alt="">
+                        <h4>ОГОНЬ</h4>
+                    </div>
+    
+                    <img class="el_image top" src="{% static 'main/images/nature_elements/fire.svg' %}" alt="">
+                    <img class="el_image down" src="{% static 'main/images/nature_elements/fire.svg' %}" alt="">
+    
+                    <div class="decor">
+                        <img src="{% static 'main/images/nature_elements/subtract1.png' %}" alt="">
+                    </div>
+                </div>
+
+                <div class="element_description">
+                    <div class="content">
+                        <p>
+                            Может быть отблеск внутри тебя готов сиять естественным образом.
+                            Чувствовать пылкий азарт открытий - это принимать свое пламя, не сжигая остальные стихии в себе.
+                        </p>
+    
+                        <img class="coach_image" src="{% static 'main/images/nature_elements/coach.svg' %}" alt="">
+
+                        <img class="corner" src="{% static 'main/images/nature_elements/slice.svg' %}" alt="" >
+
+                        <img class="element_decor" src="{% static 'main/images/nature_elements/flame_decor.svg' %}" alt="" >
+                    </div>
+                </div>
+            </div>
+            
+            <div class="main_element" >
+                <img src="{% static 'main/images/main_element.png' %}" alt="">
+            </div>
+
+            <div class="grid_item c " onclick="openNatureElement(event)">
+                <div class="item_content">
+                    <div class="name">
+                        <h4>ЗЕМЛЯ</h4>
+                        <img src="{% static 'main/images/nature_elements/arrow_right_up.svg' %}" alt="">
+                    </div>
+    
+                    <img class="el_image top" src="{% static 'main/images/nature_elements/ground.svg' %}" alt="">
+                    <img class="el_image down" src="{% static 'main/images/nature_elements/ground.svg' %}" alt="">
+    
+                    <div class="decor">
+                        <img src="{% static 'main/images/nature_elements/subtract1.png' %}" alt="">
+                    </div>
+                </div>
+
+                <div class="element_description">
+                    <div class="content">
+                        <p>
+                            Может быть отблеск внутри тебя готов сиять естественным образом.
+                            Чувствовать пылкий азарт открытий - это принимать свое пламя, не сжигая остальные стихии в себе.
+                        </p>
+    
+                        <img class="coach_image" src="{% static 'main/images/nature_elements/coach.svg' %}" alt="">
+
+                        <img class="corner" src="{% static 'main/images/nature_elements/slice.svg' %}" alt="" >
+
+                        <img class="element_decor" src="{% static 'main/images/nature_elements/ground_decor.svg' %}" alt="" >
+                    </div>
+                </div>
+            </div>
+            <div class="grid_item d " onclick="openNatureElement(event)">
+                <div class="item_content">
+                    <div class="name">
+                        <img src="{% static 'main/images/nature_elements/arrow_left_up.svg' %}" alt="">
+                        <h4>ВОЗДУХ</h4>
+                    </div>
+    
+                    <img class="el_image top" src="{% static 'main/images/nature_elements/air.svg' %}" alt="">
+                    <img class="el_image down" src="{% static 'main/images/nature_elements/air.svg' %}" alt="">
+    
+                    <div class="decor">
+                        <img src="{% static 'main/images/nature_elements/subtract1.png' %}" alt="">
+                    </div>
+                </div>
+
+                <div class="element_description">
+                    <div class="content">
+                        <p>
+                            Может быть отблеск внутри тебя готов сиять естественным образом.
+                            Чувствовать пылкий азарт открытий - это принимать свое пламя, не сжигая остальные стихии в себе.
+                        </p>
+    
+                        <img class="coach_image" src="{% static 'main/images/nature_elements/coach.svg' %}" alt="">
+
+                        <img class="corner" src="{% static 'main/images/nature_elements/slice.svg' %}" alt="" >
+
+                        <img class="element_decor" src="{% static 'main/images/nature_elements/air_decor.svg' %}" alt="" >
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
