--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -2528,4 +2528,13 @@
   width: 100%;
   height: 100%;
   fill: none !important;
+  transition: 0.3s;
+}
+@media screen and (min-width: 992px) {
+  .activities_slider_container .activities_slider .splide__arrows .splide__arrow svg:hover {
+    fill: rgba(106, 88, 71, 0.1215686275) !important;
+  }
+  .activities_slider_container .activities_slider .splide__arrows .splide__arrow svg:hover rect {
+    stroke: rgba(106, 88, 71, 0.1215686275) !important;
+  }
 }/*# sourceMappingURL=home.css.map */
