--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -7,6 +7,8 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'main/home/home.css' %}">
+    <link rel="stylesheet" href="{% static 'main/splide/splide.min.css' %}">
+    <script src="{% static 'main/scripts/splide.min.js' %}" defer></script>
     <script src="{% static 'main/home/home.js' %}" defer></script>
 {% endblock %}
 
