--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -220,29 +220,29 @@
     padding: 0 16px;
   }
 }
-.slider_container .container h3 {
+.slider_container .container h1 {
   position: relative;
   color: var(--brown3);
   font-family: var(--anticva);
   font-size: 90px;
 }
 @media screen and (max-width: 1300px) {
-  .slider_container .container h3 {
+  .slider_container .container h1 {
     width: -moz-min-content;
     width: min-content;
   }
 }
 @media screen and (max-width: 1000px) and (max-width: 768px) {
-  .slider_container .container h3 {
+  .slider_container .container h1 {
     font-size: calc(44px + 78.2 * (100vw - 390px) / 1920);
   }
 }
 @media screen and (max-width: 1000px) and (min-width: 768px) {
-  .slider_container .container h3 {
+  .slider_container .container h1 {
     font-size: calc(44px + 46 * 0.0520833333vw);
   }
 }
-.slider_container .container p.decor {
+.slider_container .container span.decor {
   position: relative;
   width: -moz-max-content;
   width: max-content;
@@ -253,12 +253,12 @@
   font-family: var(--main-font);
 }
 @media screen and (max-width: 1300px) {
-  .slider_container .container p.decor {
+  .slider_container .container span.decor {
     left: 40%;
   }
 }
 @media screen and (max-width: 700px) {
-  .slider_container .container p.decor {
+  .slider_container .container span.decor {
     left: unset;
     margin-top: 20px;
     margin-left: auto;
